dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([glish])
AC_CONFIG_HEADER(glish/config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_PROG_YACC
AC_CHECK_PROG(RSH,remsh,remsh,rsh)

dnl Checks for header files.
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(libc.h sys/filio.h X11/fd.h sys/select.h sigLib.h unistd.h)
AC_CHECK_HEADERS(sys/signal.h vfork.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_CHECK_TYPE(malloc_t,void*)

dnl Checks for library functions.
AC_CHECK_LIB(bsd, main)
AC_CHECK_LIB(socket, main)
AC_CHECK_LIB(inet, main)
AC_CHECK_LIB(nsl, main)
AC_TYPE_SIGNAL
AC_FUNC_FORK
AC_CHECK_FUNCS(gethostname setrlimit waitpid strdup setsockopt)
AC_CHECK_FUNCS(sigprocmask uname)

AC_CONFIG_FILES([sds/Makefile editline/Makefile glish/Makefile glish/clients/Makefile])
AC_OUTPUT
